--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:name=".CameraActivity">
         </activity>
 
+        <activity
+            android:name=".WardrobeActivity">
+        </activity>
     </application>
 
 </manifest>
