--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            res.srcDirs = ['src/main/res', 'src/main/res/xml']
+            resources.srcDirs = ['src/main/resources', 'src/main/resources/xml']
+        }
+    }
 }
 
 dependencies {
