--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,10 @@
         android:required="true" />
     <!--Allows saving photos in storage-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-
+    <!--Used for location services-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/suitup_launcher"
@@ -32,6 +34,8 @@
             android:name=".CameraActivity">
         </activity>
 
-    </application>
+        <activity android:name=".LocationActivity">
 
+        </activity>
+    </application>
 </manifest>
