--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,10 +39,16 @@
             android:name=".CameraActivity">
         </activity>
 
+        <activity
+            android:name=".LocationActivity">
+        </activity>
 
-        <activity android:name=".LocationActivity">
+        <activity
+            android:name=".WardrobeMgmtActivity">
+        </activity>
 
-
+        <activity
+            android:name=".ItemDetailActivity">
         </activity>
     </application>
 </manifest>
