--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.csulb.suitup">
-    <!--Requires a camera in order to use application-->
-    <uses-feature android:name="android.hardware.camera"
+
+    <!-- Requires a camera in order to use application -->
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
-    <!--Allows saving photos in storage-->
+    <!-- Allows saving photos in storage -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--Used for location services-->
+    <!-- Used for location services -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--Used for camera-->
+    <!-- Used for camera -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -20,29 +23,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity
-            android:name=".LoadingActivity">
+        <activity android:name=".LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="edu.csulb.suitup.CameraActivity" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".CameraActivity">
-        </activity>
-
-
-        <activity android:name=".LocationActivity">
-
-
-        </activity>
+        <activity android:name=".CameraActivity"></activity>
+        <activity android:name=".LocationActivity"></activity>
+        <activity android:name=".RandomWardrobeActivity"></activity>
     </application>
+
 </manifest>
